--- a/MADSkillsNavigationSample/app/src/main/AndroidManifest.xml
+++ b/MADSkillsNavigationSample/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
         <activity
             android:name="com.android.samples.donuttracker.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:exported="true">
             <nav-graph android:value="@navigation/nav_graph" />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
