--- a/MADSkillsNavigationSample/build.gradle
+++ b/MADSkillsNavigationSample/build.gradle
@@ -17,16 +17,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.4.10'
+    apply from: 'versions.gradle'
+    addRepos(repositories)
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        def nav_version = "2.3.0"
+        classpath deps.android_gradle_plugin
+        classpath deps.kotlin.plugin
+        def nav_version = "2.5.3"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -35,11 +36,7 @@ buildscript {
 }
 
 allprojects {
-    repositories {
-        google()
-        jcenter()
-        
-    }
+    addRepos(repositories)
 }
 
 task clean(type: Delete) {
