--- a/MADSkillsNavigationSample/versions.gradle
+++ b/MADSkillsNavigationSample/versions.gradle
@@ -154,6 +154,7 @@ kotlin.allopen = "org.jetbrains.kotlin:kotlin-allopen:$versions.kotlin"
 deps.kotlin = kotlin
 
 def lifecycle = [:]
+lifecycle.core = "androidx.lifecycle:lifecycle-livedata-core-ktx:$versions.lifecycle"
 lifecycle.runtime = "androidx.lifecycle:lifecycle-runtime:$versions.lifecycle"
 lifecycle.java8 = "androidx.lifecycle:lifecycle-common-java8:$versions.lifecycle"
 lifecycle.compiler = "androidx.lifecycle:lifecycle-compiler:$versions.lifecycle"
